--- a/CodingChellenge_GameProject/CodingChallenge_Game/Packages/manifest.json
+++ b/CodingChellenge_GameProject/CodingChallenge_Game/Packages/manifest.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "com.unity.2d.animation": "2.0.0-preview.1",
+    "com.unity.2d.ik": "1.0.8-preview.1",
+    "com.unity.2d.psdimporter": "1.0.0-preview.2",
     "com.unity.ads": "2.0.8",
     "com.unity.analytics": "3.2.2",
-    "com.unity.cinemachine": "2.2.8",
     "com.unity.collab-proxy": "1.2.15",
     "com.unity.package-manager-ui": "2.0.3",
     "com.unity.purchasing": "2.0.3",
